--- a/BloggingService/pom.xml
+++ b/BloggingService/pom.xml
@@ -59,8 +59,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency> 
-
+        </dependency>      
+       <dependency>
+      <groupId>com.netflix.eureka</groupId>
+      <artifactId>eureka-client</artifactId>
+      <version>1.1.37</version>
+      <scope>runtime</scope>
+       </dependency>   
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
