--- a/BloggingService/src/main/resources/application.properties
+++ b/BloggingService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #spring.profiles.active=production
 ##################################################
 server.port = 8090
+spring.application.name=BloggingService
 ##################################################
 # define H2 DataSrouce properties
 spring.datasource.url=jdbc:h2:mem:blog_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
